# AIBar

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  commitlint.config.ts  conventional-commit-scopes.cjs  eslint.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-cli.yml
.husky/: pre-commit
Sources/CodexBar/: UsageStore.swift
crates/aibar-providers/: Cargo.toml
crates/aibar-providers/src/: cli_helpers.rs  cost_models.rs  lib.rs  models.rs  pace.rs  pipeline.rs  registry.rs  status.rs  traits.rs
crates/aibar-providers/src/auth/: browser_detect.rs  cookie_chrome_linux.rs  cookie_chrome_windows.rs  cookie_finder.rs  cookie_firefox.rs  jwt.rs  mod.rs
crates/aibar-providers/src/providers/: amp.rs  antigravity.rs  augment.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  factory.rs  gemini.rs  jetbrains.rs  kilo.rs  kimi.rs  kimi_k2.rs  kiro.rs  minimax.rs  mod.rs  ollama.rs  opencode.rs  openrouter.rs  synthetic.rs  vertex_ai.rs  warp.rs  zai.rs
src/: global.css  index.html  main.tsx
src-cli/: Cargo.toml
src-cli/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: credential_commands.rs  mod.rs  settings_commands.rs  system_commands.rs  usage_commands.rs
src-tauri/src/managers/: icon_renderer.rs  mod.rs  refresh_manager.rs  settings_manager.rs  tray_manager.rs  window_manager.rs
src/app/: index.tsx  provider.tsx  router.tsx
src/app/routes/: dashboard.tsx  settings.tsx
src/components/layout/: settings-layout.tsx  tray-popup-layout.tsx
src/components/providers/: provider-card.tsx  provider-grid.tsx  provider-switcher.tsx  reset-time-label.tsx  usage-progress-bar.tsx
src/components/settings/: credential-entry-form.tsx  provider-toggle-list.tsx  refresh-cadence-selector.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  select.tsx  switch.tsx  tooltip.tsx
src/hooks/: use-provider-usage.ts  use-refresh-timer.ts
src/lib/: constants.ts  format.ts  types.ts
src/lib/utils/: get-enabled-providers.ts
src/stores/: credentials-store.ts  settings-store.ts  usage-store.ts
