[package]
name = "aibar"
version = "0.1.0"
description = "Cross-platform AI usage monitoring system tray application"
authors = ["AIBar Contributors"]
license = "MIT"
edition = "2024"
default-run = "aibar"

[lib]
name = "aibar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
aibar-providers = { path = "../crates/aibar-providers" }
tauri = { version = "2.9.1", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tiny-skia = "0.11"
tokio-util = "0.7"
futures = "0.3"
anyhow = "1.0"
open = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
