[package]
name = "aibar-providers"
version = "0.1.0"
edition = "2024"
description = "AI provider usage monitoring engine"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha1 = "0.10"
thiserror = "2"
url = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Security_Cryptography"] }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
